--- a/style.css
+++ b/style.css
@@ -157,21 +157,17 @@ nav {
     }
 }
 
-
 footer {
+    display: block;
     background-color: rgb(201, 201, 201);
     color: black;
     text-size-adjust: 1.5em;
-    padding: 1em;
     text-align: center;
+    padding: 1.3em;
     border-radius: 4px;
     border-color: rgb(0, 0, 0);
     border-width: 2px;
     border-style: solid;
-}
-
-#underlinepois {
-    text-decoration: none;
 }
 
 li {
@@ -194,7 +190,7 @@ li:hover {
 
 h1 {
     color: rgb(0, 0, 0);
-    text-shadow: rgb(224, 4, 4) 1px 1px 1px;
+    text-shadow: rgb(224, 4, 4) 2px 2px 2px;
 }
 
 h2 {
