--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
-body {
+html, body {
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: larger;
     background-color: rgb(175, 175, 175);
+    height: 100%;
+    margin: 0;
+}
+
+main {
+    flex: 1;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header {
@@ -168,6 +180,9 @@ footer {
     border-color: rgb(0, 0, 0);
     border-width: 2px;
     border-style: solid;
+    position: relative;
+    bottom: 0;
+    flex-shrink: 0;
 }
 
 li {
