--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: larger;
@@ -24,7 +25,7 @@ header {
     text-align: center;
     font-size: 1.5em;
     text-shadow: rgb(71, 71, 71) 2px 2px 2px;
-border-bottom: 2px solid black;
+    border-bottom: 2px solid black;
 
 }
 
